--- a/templates/signup.html
+++ b/templates/signup.html
@@ -48,7 +48,7 @@
     </form>
 
     <p class="text-center text-gray-500 text-xs mt-4">
-      &copy; Spotify
+      &copy; Spotify Clone
     </p>
   </div>
 </body>
